Further improvements for field documentation
Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/provider-gcp/package/crds/appengine.gcp.upbound.io_applications.yaml
+++ b/provider-gcp/package/crds/appengine.gcp.upbound.io_applications.yaml
@@ -89,6 +89,7 @@ spec:
                       type: object
                     type: array
                   iap:
+                    description: Settings for enabling Cloud Identity Aware Proxy
                     items:
                       properties:
                         enabled:
