--- a/provider-gcp/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
@@ -745,6 +745,9 @@ spec:
                             type: object
                           type: array
                         versionTarget:
+                          description: A status of consistency of Instances' versions
+                            with their target version specified by version field on
+                            Instance Group Manager.
                           items:
                             properties:
                               isReached:
