--- a/provider-gcp/package/crds/compute.gcp.upbound.io_securitypolicies.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_securitypolicies.yaml
@@ -103,11 +103,7 @@ spec:
                                 items:
                                   properties:
                                     srcIpRanges:
-                                      description: Set of IP addresses or ranges (IPV4
-                                        or IPV6) in CIDR notation to match against
-                                        inbound traffic. There is a limit of 10 IP
-                                        ranges per rule. A value of '*' matches all
-                                        IPs (can be used to override the default behavior).
+                                      description: field in config.
                                       items:
                                         type: string
                                       type: array
