--- a/provider-gcp/package/crds/containeraws.gcp.upbound.io_clusters.yaml
+++ b/provider-gcp/package/crds/containeraws.gcp.upbound.io_clusters.yaml
@@ -132,8 +132,11 @@ spec:
                           items:
                             properties:
                               kmsKeyArn:
-                                description: The ARN of the AWS KMS key used to encrypt
-                                  cluster configuration.
+                                description: Optional. The Amazon Resource Name (ARN)
+                                  of the Customer Managed Key (CMK) used to encrypt
+                                  AWS EBS volumes. If not specified, the default Amazon
+                                  managed key associated to the AWS region where this
+                                  cluster runs will be used.
                                 type: string
                             required:
                             - kmsKeyArn
@@ -145,8 +148,11 @@ spec:
                           items:
                             properties:
                               kmsKeyArn:
-                                description: The ARN of the AWS KMS key used to encrypt
-                                  cluster secrets.
+                                description: Optional. The Amazon Resource Name (ARN)
+                                  of the Customer Managed Key (CMK) used to encrypt
+                                  AWS EBS volumes. If not specified, the default Amazon
+                                  managed key associated to the AWS region where this
+                                  cluster runs will be used.
                                 type: string
                             required:
                             - kmsKeyArn
