--- a/provider-gcp/package/crds/secretmanager.gcp.upbound.io_secrets.yaml
+++ b/provider-gcp/package/crds/secretmanager.gcp.upbound.io_secrets.yaml
@@ -367,11 +367,7 @@ spec:
                     description: an identifier for the resource with format projects/{{project}}/secrets/{{secret_id}}
                     type: string
                   name:
-                    description: 'The resource name of the Pub/Sub topic that will
-                      be published to, in the following format: projects//topics/.
-                      For publication to succeed, the Secret Manager Service Agent
-                      service account must have pubsub.publisher permissions on the
-                      topic.'
+                    description: 'The resource name of the Secret. Format: projects/{{project}}/secrets/{{secret_id}}'
                     type: string
                 type: object
               conditions:
