--- a/provider-gcp/package/crds/storage.gcp.upbound.io_buckets.yaml
+++ b/provider-gcp/package/crds/storage.gcp.upbound.io_buckets.yaml
@@ -139,10 +139,9 @@ spec:
                           items:
                             properties:
                               storageClass:
-                                description: 'The target Storage Class of objects
-                                  affected by this Lifecycle Rule. Supported values
-                                  include: STANDARD, MULTI_REGIONAL, REGIONAL, NEARLINE,
-                                  COLDLINE, ARCHIVE.'
+                                description: 'The Storage Class of the new bucket.
+                                  Supported values include: STANDARD, MULTI_REGIONAL,
+                                  REGIONAL, NEARLINE, COLDLINE, ARCHIVE.'
                                 type: string
                               type:
                                 description: 'The type of the action of this Lifecycle
