--- a/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_servicenetworkingpeereddnsdomains.yaml
+++ b/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_servicenetworkingpeereddnsdomains.yaml
@@ -70,10 +70,15 @@ spec:
                       sure to suffix with a . (dot).
                     type: string
                   network:
+                    description: The network in the consumer project.
                     type: string
                   project:
+                    description: The producer project number. If not provided, the
+                      provider project is used.
                     type: string
                   service:
+                    description: Private service connection between service and consumer
+                      network, defaults to servicenetworking.googleapis.com
                     type: string
                 required:
                 - dnsSuffix
