--- a/provider-gcp/package/crds/compute.gcp.upbound.io_autoscalers.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_autoscalers.yaml
@@ -95,18 +95,8 @@ spec:
                                   based on CPU metric is enabled. Valid values are:'
                                 type: string
                               target:
-                                description: The target CPU utilization that the autoscaler
-                                  should maintain. Must be a float value in the range
-                                  (0, 1]. If not specified, the default is 0.6. If
-                                  the CPU level is below the target utilization, the
-                                  autoscaler scales down the number of instances until
-                                  it reaches the minimum number of instances you specified
-                                  or until the average CPU of your instances reaches
-                                  the target utilization. If the average CPU is above
-                                  the target utilization, the autoscaler scales up
-                                  until it reaches the maximum number of instances
-                                  you specified or until the average utilization reaches
-                                  the target utilization.
+                                description: URL of the managed instance group that
+                                  this autoscaler will scale.
                                 type: number
                             required:
                             - target
@@ -118,10 +108,8 @@ spec:
                           items:
                             properties:
                               target:
-                                description: Fraction of backend capacity utilization
-                                  (set in HTTP(s) load balancing configuration) that
-                                  autoscaler should maintain. Must be a positive float
-                                  value. If not defined, the default is 0.8.
+                                description: URL of the managed instance group that
+                                  this autoscaler will scale.
                                 type: number
                             required:
                             - target
@@ -139,20 +127,12 @@ spec:
                           items:
                             properties:
                               name:
-                                description: The identifier (type) of the Stackdriver
-                                  Monitoring metric. The metric cannot have negative
-                                  values. The metric must have a value type of INT64
-                                  or DOUBLE.
+                                description: The identifier for this object. Format
+                                  specified above.
                                 type: string
                               target:
-                                description: The target value of the metric that autoscaler
-                                  should maintain. This must be a positive value.
-                                  A utilization metric scales number of virtual machines
-                                  handling requests to increase or decrease proportionally
-                                  to the metric. For example, a good metric to use
-                                  as a utilizationTarget is www.googleapis.com/compute/instance/network/received_bytes_count.
-                                  The autoscaler will work to keep this value constant
-                                  for each of the instances.
+                                description: URL of the managed instance group that
+                                  this autoscaler will scale.
                                 type: number
                               type:
                                 description: Defines how target utilization value
@@ -210,6 +190,7 @@ spec:
                           items:
                             properties:
                               description:
+                                description: A description of a scaling schedule.
                                 type: string
                               disabled:
                                 description: A boolean value that specifies if a scaling
@@ -254,6 +235,7 @@ spec:
                       type: object
                     type: array
                   description:
+                    description: A description of a scaling schedule.
                     type: string
                   project:
                     description: The ID of the project in which the resource belongs.
