--- a/provider-gcp/package/crds/compute.gcp.upbound.io_forwardingrules.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_forwardingrules.yaml
@@ -780,13 +780,8 @@ spec:
                     description: The URI of the created resource.
                     type: string
                   serviceName:
-                    description: Name of the resource; provided by the client when
-                      the resource is created. The name must be 1-63 characters long,
-                      and comply with RFC1035. Specifically, the name must be 1-63
-                      characters long and match the regular expression [a-z]([-a-z0-9]*[a-z0-9])?
-                      which means the first character must be a lowercase letter,
-                      and all following characters must be a dash, lowercase letter,
-                      or digit, except the last character, which cannot be a dash.
+                    description: The internal fully qualified service name for this
+                      Forwarding Rule. This field is only used for INTERNAL load balancing.
                     type: string
                 type: object
               conditions:
