--- a/provider-gcp/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
@@ -348,11 +348,9 @@ spec:
                                   will be generated.
                                 type: string
                               networkTier:
-                                description: 'The networking tier used for configuring
-                                  this instance template. This field can take the
-                                  following values: PREMIUM, STANDARD or FIXED_STANDARD.
-                                  If this field is not specified, it is assumed to
-                                  be PREMIUM.'
+                                description: The service-level to be provided for
+                                  IPv6 traffic when the subnet has an external subnet.
+                                  Only PREMIUM and STANDARD tier is valid for IPv6.
                                 type: string
                             type: object
                           type: array
@@ -658,7 +656,11 @@ spec:
                           items:
                             properties:
                               key:
-                                description: The key for the node affinity label.
+                                description: Corresponds to the label key of a reservation
+                                  resource. To target a SPECIFIC_RESERVATION by name,
+                                  specify compute.googleapis.com/reservation-name
+                                  as the key and specify the name of your reservation
+                                  as the only value.
                                 type: string
                               operator:
                                 description: The operator. Can be IN for node-affinities
