--- a/provider-gcp/package/crds/compute.gcp.upbound.io_regionbackendservices.yaml
+++ b/provider-gcp/package/crds/compute.gcp.upbound.io_regionbackendservices.yaml
@@ -412,14 +412,25 @@ spec:
                           items:
                             properties:
                               name:
-                                description: Name of the cookie.
+                                description: Name of the resource. Provided by the
+                                  client when the resource is created. The name must
+                                  be 1-63 characters long, and comply with RFC1035.
+                                  Specifically, the name must be 1-63 characters long
+                                  and match the regular expression [a-z]([-a-z0-9]*[a-z0-9])?
+                                  which means the first character must be a lowercase
+                                  letter, and all following characters must be a dash,
+                                  lowercase letter, or digit, except the last character,
+                                  which cannot be a dash.
                                 type: string
                               path:
                                 description: Path to set for the cookie.
                                 type: string
                               ttl:
-                                description: Lifetime of the cookie. Structure is
-                                  documented below.
+                                description: The TTL (in seconds) for which to cache
+                                  responses with the corresponding status code. The
+                                  maximum allowed value is 1800s (30 minutes), noting
+                                  that infrequently accessed objects may be evicted
+                                  from the cache before the defined TTL.
                                 items:
                                   properties:
                                     nanos:
@@ -613,8 +624,11 @@ spec:
                       type: object
                     type: array
                   loadBalancingScheme:
+                    description: is set to INTERNAL_MANAGED
                     type: string
                   localityLbPolicy:
+                    description: is set to MAGLEV or RING_HASH Structure is documented
+                      below.
                     type: string
                   logConfig:
                     description: This field denotes the logging options for the load
@@ -772,6 +786,7 @@ spec:
                       If it is not provided, the provider project is used.
                     type: string
                   protocol:
+                    description: is set to HTTP, HTTPS, or HTTP2
                     type: string
                   region:
                     description: The Region in which the created backend service should
