--- a/provider-gcp/package/crds/osconfig.gcp.upbound.io_ospolicyassignments.yaml
+++ b/provider-gcp/package/crds/osconfig.gcp.upbound.io_ospolicyassignments.yaml
@@ -429,7 +429,7 @@ spec:
                                         type: object
                                       type: array
                                     file:
-                                      description: File resource
+                                      description: A remote or local file.
                                       items:
                                         properties:
                                           content:
@@ -438,7 +438,7 @@ spec:
                                               1024 characters.
                                             type: string
                                           file:
-                                            description: A remote or local source.
+                                            description: A remote or local file.
                                             items:
                                               properties:
                                                 allowInsecure:
@@ -511,20 +511,19 @@ spec:
                                         type: object
                                       type: array
                                     id:
-                                      description: 'Required. The id of the resource
-                                        with the following restrictions: * Must contain
-                                        only lowercase letters, numbers, and hyphens.
-                                        * Must start with a letter. * Must be between
-                                        1-63 characters. * Must end with a number
-                                        or a letter. * Must be unique within the OS
-                                        policy.'
+                                      description: Required. A one word, unique name
+                                        for this repository. This is the repo id in
+                                        the zypper config file and also the display_name
+                                        if display_name is omitted. This id is also
+                                        used as the unique identifier when checking
+                                        for GuestPolicy conflicts.
                                       type: string
                                     pkg:
                                       description: Package resource
                                       items:
                                         properties:
                                           apt:
-                                            description: A package managed by Apt.
+                                            description: An Apt Repository.
                                             items:
                                               properties:
                                                 name:
@@ -541,12 +540,13 @@ spec:
                                                 pullDeps:
                                                   description: 'Whether dependencies
                                                     should also be installed. - install
-                                                    when false: dpkg -i package -
-                                                    install when true: apt-get update
-                                                    && apt-get -y install package.deb'
+                                                    when false: rpm --upgrade --replacepkgs
+                                                    package.rpm - install when true:
+                                                    yum -y install package.rpm or
+                                                    zypper -y install package.rpm'
                                                   type: boolean
                                                 source:
-                                                  description: Required. A deb package.
+                                                  description: Required. An rpm package.
                                                   items:
                                                     properties:
                                                       allowInsecure:
@@ -648,7 +648,7 @@ spec:
                                                     type: string
                                                   type: array
                                                 source:
-                                                  description: Required. The MSI package.
+                                                  description: Required. An rpm package.
                                                   items:
                                                     properties:
                                                       allowInsecure:
@@ -804,7 +804,7 @@ spec:
                                               type: object
                                             type: array
                                           yum:
-                                            description: A package managed by YUM.
+                                            description: A Yum Repository.
                                             items:
                                               properties:
                                                 name:
@@ -815,7 +815,7 @@ spec:
                                               type: object
                                             type: array
                                           zypper:
-                                            description: A package managed by Zypper.
+                                            description: A Zypper Repository.
                                             items:
                                               properties:
                                                 name:
@@ -860,8 +860,11 @@ spec:
                                                     maintains a keyring at /etc/apt/trusted.gpg.d/osconfig_agent_managed.gpg.
                                                   type: string
                                                 uri:
-                                                  description: Required. URI for this
-                                                    repository.
+                                                  description: Required. URI from
+                                                    which to fetch the object. It
+                                                    should contain both the protocol
+                                                    and path following the format
+                                                    {protocol}://{location}.
                                                   type: string
                                               required:
                                               - archiveType
@@ -875,8 +878,7 @@ spec:
                                             items:
                                               properties:
                                                 name:
-                                                  description: Required. The name
-                                                    of the repository.
+                                                  description: Required. Package name.
                                                   type: string
                                                 url:
                                                   description: Required. The url of
@@ -907,11 +909,11 @@ spec:
                                                 id:
                                                   description: Required. A one word,
                                                     unique name for this repository.
-                                                    This is the repo id in the yum
+                                                    This is the repo id in the zypper
                                                     config file and also the display_name
                                                     if display_name is omitted. This
                                                     id is also used as the unique
-                                                    identifier when checking for resource
+                                                    identifier when checking for GuestPolicy
                                                     conflicts.
                                                   type: string
                                               required:
@@ -939,11 +941,11 @@ spec:
                                                 id:
                                                   description: Required. A one word,
                                                     unique name for this repository.
-                                                    This is the repo id in the yum
+                                                    This is the repo id in the zypper
                                                     config file and also the display_name
                                                     if display_name is omitted. This
                                                     id is also used as the unique
-                                                    identifier when checking for resource
+                                                    identifier when checking for GuestPolicy
                                                     conflicts.
                                                   type: string
                                               required:
@@ -1202,10 +1204,7 @@ spec:
                       provided on update, it must match the server's etag.
                     type: string
                   id:
-                    description: Required. A one word, unique name for this repository.
-                      This is the repo id in the yum config file and also the display_name
-                      if display_name is omitted. This id is also used as the unique
-                      identifier when checking for resource conflicts.
+                    description: an identifier for the resource with format projects/{{project}}/locations/{{location}}/osPolicyAssignments/{{name}}
                     type: string
                   osPolicies:
                     description: Required. List of OS policies to be applied to the
@@ -1229,7 +1228,7 @@ spec:
                                 items:
                                   properties:
                                     file:
-                                      description: File resource
+                                      description: A remote or local file.
                                       items:
                                         properties:
                                           permissions:
