--- a/provider-gcp/package/crds/osconfig.gcp.upbound.io_patchdeployments.yaml
+++ b/provider-gcp/package/crds/osconfig.gcp.upbound.io_patchdeployments.yaml
@@ -148,7 +148,6 @@ spec:
                             properties:
                               excludes:
                                 description: List of packages to exclude from update.
-                                  These packages will be excluded.
                                 items:
                                   type: string
                                 type: array
@@ -427,14 +426,16 @@ spec:
                                   type: string
                                 type: array
                               excludes:
-                                description: List of KBs to exclude from update.
+                                description: List of packages to exclude from update.
                                 items:
                                   type: string
                                 type: array
                               exclusivePatches:
-                                description: An exclusive list of kbs to be updated.
-                                  These are the only patches that will be updated.
-                                  This field must not be used with other patch configurations.
+                                description: An exclusive list of patches to be updated.
+                                  These are the only patches that will be installed
+                                  using 'zypper patch patch:' command. This field
+                                  must not be used with any other patch configuration
+                                  fields.
                                 items:
                                   type: string
                                 type: array
@@ -447,7 +448,6 @@ spec:
                             properties:
                               excludes:
                                 description: List of packages to exclude from update.
-                                  These packages will be excluded.
                                 items:
                                   type: string
                                 type: array
@@ -549,9 +549,10 @@ spec:
                                 items:
                                   properties:
                                     dayOfWeek:
-                                      description: A day of the week. Possible values
-                                        are MONDAY, TUESDAY, WEDNESDAY, THURSDAY,
-                                        FRIDAY, SATURDAY, and SUNDAY.
+                                      description: IANA Time Zone Database time zone,
+                                        e.g. "America/New_York". Possible values are
+                                        MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY,
+                                        SATURDAY, and SUNDAY.
                                       type: string
                                     weekOrdinal:
                                       description: Week number in a month. 1-4 indicates
@@ -870,12 +871,12 @@ spec:
                       format, accurate to nanoseconds. Example: "2014-10-02T15:01:23.045123456Z".'
                     type: string
                   id:
-                    description: IANA Time Zone Database time zone, e.g. "America/New_York".
+                    description: an identifier for the resource with format {{name}}
                     type: string
                   lastExecuteTime:
-                    description: 'The time the last patch job ran successfully. A
-                      timestamp in RFC3339 UTC "Zulu" format, accurate to nanoseconds.
-                      Example: "2014-10-02T15:01:23.045123456Z".'
+                    description: 'The last time a patch job was started by this deployment.
+                      Timestamp is in RFC3339 text format. A timestamp in RFC3339
+                      UTC "Zulu" format, accurate to nanoseconds. Example: "2014-10-02T15:01:23.045123456Z".'
                     type: string
                   name:
                     description: 'Unique name for the patch deployment resource in
